--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
             <div>
                 <h1>Anderson Fernandes Souza</h1>
                 <p>Professor de Biologia do Centro Federal de Educação Tecnológica Celso Suckow da Fonseca (CEFET/RJ), Campus Nova Friburgo.<br>Tem Experiência na área de Botânica em Florística, em Biotecnologia em cultura de células e em Fisiologia Vegetal e em ensino em Bioquímica, Atiando principalmente nos seguintes temas: Sistemas Agroflorestais, Fisiologia pós-colheita, Melhoramento Vegetal e Educação (Desenvolvimento de matériais didáticos - enfase em jogos).</p>
-
-                <a href="#formação">
-                    <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="30" height="30"><path d="M7.5 12L0 4h15l-7.5 8z" fill="currentColor"></path></svg>
-                </a>
             </div>
 
             <div>
@@ -43,25 +39,20 @@
             <div>
                 <img src="./Imagens-Documentos/uenf.jpg" alt="Universidade Estadual do Norte Fluminense Darcy Ribeiro">
                 <p>Licenciatura em Biologia pela Universidade Estadual do Norte Fluminense Darcy Ribeiro.</p>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiij5-70ZiAAxX_ppUCHa8fDoEQFnoECAsQAQ&url=https%3A%2F%2Fuenf.br%2Fportal%2F&usg=AOvVaw0ZqXRP6aYvayDtN2X_IKNP&opi=89978449" target="_blank">Sobre</a>
+                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiij5-70ZiAAxX_ppUCHa8fDoEQFnoECAsQAQ&url=https%3A%2F%2Fuenf.br%2Fportal%2F&usg=AOvVaw0ZqXRP6aYvayDtN2X_IKNP&opi=89978449" target="_blank" class="button">Sobre</a>
             </div>
 
             <div>
                 <img src="./Imagens-Documentos/ufms-.png" alt="Universidade Federal de Mato Grosso do Sul">
                 <p>Mestrado em Biologia Vegetal pela Universidade Federal de Mato Grosso do Sul.</p>
-                <a href="https://www.ufms.br" target="_blank">Sobre</a>
+                <a href="https://www.ufms.br" target="_blank" class="button">Sobre</a>
             </div>
 
             <div>
                 <img src="./Imagens-Documentos/uenf.jpg" alt="Universidade Estadual do Norte Fluminense Darcy Ribeiro">
                 <p>Doutorado em Genética e Melhoramento de Plantas pela Universidade Estadual do Norte Fluminense Darcy Ribeiro.</p>
-                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiij5-70ZiAAxX_ppUCHa8fDoEQFnoECAsQAQ&url=https%3A%2F%2Fuenf.br%2Fportal%2F&usg=AOvVaw0ZqXRP6aYvayDtN2X_IKNP&opi=89978449" target="_blank">Sobre</a>
+                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiij5-70ZiAAxX_ppUCHa8fDoEQFnoECAsQAQ&url=https%3A%2F%2Fuenf.br%2Fportal%2F&usg=AOvVaw0ZqXRP6aYvayDtN2X_IKNP&opi=89978449" target="_blank" class="button">Sobre</a>
             </div>
-
-            <a href="#projetos" class="seta">
-                <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="30" height="30"><path d="M7.5 12L0 4h15l-7.5 8z" fill="currentColor"></path></svg>
-            </a>
-
         </div>
     </section>
     <section id="projetos">
@@ -74,14 +65,14 @@
                 <img src="./Imagens-Documentos/user-svgrepo-com.svg" alt="">
                 <h3>Autoria própria</h3>
                 <p>Principais projetos e trabalhos realizados por minha pessoa.</p>
-                <a href="#" target="_blank">Mais</a>
+                <a href="#" target="_blank" class="button">Mais</a>
             </div>
 
             <div>
                 <img src="./Imagens-Documentos/team-3-svgrepo-com.svg" alt="">
                 <h3>Autoria dos alunos</h3>
                 <p>Principais projetos e trabalhos realizados pelos alunos do CEFET/RJ Nova Friburgo.</p>
-                    <a href="#" target="_blank">Mais</a>
+                <a href="#" target="_blank" class="button">Mais</a>
             </div>
 
         </div>
@@ -112,7 +103,7 @@
                 <img src="./Imagens-Documentos/books-book-svgrepo-com.svg" alt="">
                 <h3>Livros/Slides/Vídeos</h3>
                 <p>Clique no botão abaixo e encontre recomendações de livros e vídeos, além de slides e apostilas sobre a matéria de Biologia.</p>
-                <a href="./Materiais/Material.html">Mais</a>
+                <a href="./Materiais/Material.html" class="button">Mais</a>
             </div>
 
         </div>
